<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="meal">Meal Type</string>
    <string name="satisfaction">Satisfaction</string>
    <string name="rating">Rating</string>
    <string name="submit">Submit</string>

    <string name="customersatisfaction">Customer\'s Satisfaction:</string>
    <string name="mealtype">Meal Type:</string>
    <string name="customerrating">Customer Rating:</string>
    <string name="title_activity_display_menu">DisplayMenu</string>


</resources>
